--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "clsx": "^2.1.1",
+    "drag-drop-touch": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.1.3",
