--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neuroshima-grid",
+  "name": "battle-tiles",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
